terminado buscar por nombre y por categoria
